--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "next": "10.1.3",
+    "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.10",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^2.1.1"
   }
 }
