--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "10.1.3",
     "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
