--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.2.1",
     "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
