--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.2.1",
+    "swr": "^0.5.5",
     "use-persisted-state": "^0.3.3",
     "yup": "^0.32.9"
   },
