--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.4.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.21.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
@@ -18,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.2.1",
+    "react-icons": "^4.2.0",
     "swr": "^0.5.5",
     "use-persisted-state": "^0.3.3",
     "yup": "^0.32.9"
