--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.2.1",
     "react-icons": "^4.2.0",
+    "react-markdown": "^6.0.0",
+    "react-mde": "^11.1.0",
     "swr": "^0.5.5",
     "use-persisted-state": "^0.3.3",
     "yup": "^0.32.9"
